syntax = "proto3";

import "google/api/annotations.proto";

package api;

service User {
    rpc SignIn (LoginRequest) returns (LoginReply) {
        option (google.api.http) = {
            post: "/remote/user/signin"
        };
    }
}

message LoginRequest {
    string id = 1;
    string password = 2;
}

message LoginReply {
    bool result = 1;
    string message = 2;
}